tests/reject/coerce_return_narrow.ty
# no silent float->int coercion of a return value (must reject, both compilers)
fn h() -> int:
    return 7.9
fn main():
    println(str(h()))
